<resources>
    <string name="app_name">WanAndroid</string>

    <string name="menu_favourite">我的收藏</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about_us">关于我们</string>

    <string name="log_in">登录</string>
    <string name="draw_layout_open">Open</string>
    <string name="draw_layout_close">Close</string>

    <string name="bottom_navigation_home">主页</string>
    <string name="bottom_navigation_hierarchy">体系</string>
    <string name="bottom_navigation_wechat">公众号</string>
    <string name="bottom_navigation_project">项目</string>
    <string name="bottom_navigation_myself">我的</string>

    <string name="homepage_favourite_description">This image shows article is collected or not</string>
    <string name="splash_screen">Splash screen</string>

    <string name="top_article">置顶</string>

    <string name="user_name_hint">请输入用户名</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="sign_in">注册</string>
</resources>
